--- a/client/src/index.css
+++ b/client/src/index.css
@@ -94,3 +94,41 @@
   width: 100%;
   position: relative;
 }
+
+@keyframes growAndShrink {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes shrinkAndDelete {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(.8);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(400px);
+    opacity: 0;
+    /* transform: scale(0.3); */
+  }
+}
+
+.tick-anim-class{
+  stroke: green;
+  animation: growAndShrink 1s forwards;
+}
+.exit-taskbox {
+  animation: shrinkAndDelete 1s forwards;
+}
+.fadeAnim{
+  transition: background-color 400ms;
+}
